feat: update dependencies and add error boundary component
- Updated package.json to include new dependencies: @hookform/resolvers, @tanstack/react-query, axios, clsx, date-fns.
- Added ErrorBoundary component to handle errors in the application.
- Wrapped the main App component with ErrorBoundary to catch errors in child components.
- Enhanced AuthContext to manage token storage and refresh logic using a new tokenStore service.
- Introduced useRequireRole hooks to enforce role-based access control for admin and editor routes.
- Updated various pages to utilize new data structures and handle API responses more robustly.
- Implemented fallback values for homepage statistics to improve user experience.
- Added Vite configuration for development server and proxy setup.